@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class RegistarTipoEquipaUI <<presentation>>
class RegistarTipoEquipaController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class TipoEquipaRepository <<repository>>


RegistarTipoEquipaUI --> RegistarTipoEquipaController
RegistarTipoEquipaController : registarTipoEquipa(codigoUnico,descricao,cor)

RegistarTipoEquipaController --> TipoEquipaRepository
RegistarTipoEquipaController --> PersistenceContext
PersistenceContext --> RepositoryFactory

RepositoryFactory --> TipoEquipaRepository

PersistenceContext : repositories()

TipoEquipaRepository : create()
TipoEquipaRepository : save(newServico)

@enduml